@@ -1,0 +1,6 @@
+from dummy import *
+
+
+def test():
+    """Dummy function using dummy.*"""
+    dummy_function()
