@@ -1,0 +1,3 @@
+
+.. automodule:: autodoc_dummy_module
+   :members:
